--- a/src/main/webapp/addstudent.html
+++ b/src/main/webapp/addstudent.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Add Student</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<form action="add">
@@ -13,7 +14,7 @@
 			</tr>
 			<tr>
 				<td>Enter Address:</td>
-				<td><textarea rows="5" cols="10" name="address"></textarea></td>
+				<td><textarea rows="5" cols="20" name="address"></textarea></td>
 			</tr>
 			<tr>
 				<td>Enter Percentage:</td>
@@ -30,6 +31,7 @@
 			</tr>
 		</table>
 	</form>
-
+	<br>
+	<a href="http://localhost:8080/hibernate_basics/home.html"><button>Home</button></a>
 </body>
 </html>
