--- a/src/main/webapp/updatestudent.html
+++ b/src/main/webapp/updatestudent.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Add Student</title>
+<title>Update Student</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<form action="update">
@@ -13,15 +14,16 @@
 			</tr>
 			<tr>
 				<td>New Address:</td>
-				<td><textarea rows="5" cols="10" name="address"></textarea></td>
+				<td><textarea rows="5" cols="20" name="address"></textarea></td>
 			</tr>
-			
+
 			<tr>
 				<td><button>Update</button></td>
 				<td><button>Cancel</button></td>
 			</tr>
 		</table>
 	</form>
-
+	<br>
+	<a href="http://localhost:8080/hibernate_basics/home.html"><button>Home</button></a>
 </body>
 </html>
