--- a/src/main/webapp/fetchstudent.html
+++ b/src/main/webapp/fetchstudent.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Add Student</title>
+<title>Fetch Student</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<form action="fetch">
@@ -17,6 +18,7 @@
 			</tr>
 		</table>
 	</form>
-
+	<br>
+	<a href="http://localhost:8080/hibernate_basics/home.html"><button>Home</button></a>
 </body>
 </html>
