--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -8,14 +8,14 @@
 <body>
 	<h1>Welcome to Student's Portal</h1>
 	<div>
-		<a href="http://localhost:8080/hibernate_basics/addstudent.html"><button>Add</button></a>
+		<a href="addstudent.html"><button>Add</button></a>
 		<br>
-		<a href="http://localhost:8080/hibernate_basics/updatestudent.html"><button>Update</button></a>
+		<a href="updatestudent.html"><button>Update</button></a>
 		<br>
 		
-		<a href="http://localhost:8080/hibernate_basics/deletestudent.html"><button>Delete</button></a>
+		<a href="deletestudent.html"><button>Delete</button></a>
 		<br> 
-		<a href="http://localhost:8080/hibernate_basics/fetchstudent.html"><button>Fetch</button></a>
+		<a href="fetchstudent.html"><button>Fetch</button></a>
 	</div>
 
 </body>
