--- a/src/main/webapp/fetchstudent.html
+++ b/src/main/webapp/fetchstudent.html
@@ -19,6 +19,6 @@
 		</table>
 	</form>
 	<br>
-	<a href="home.html"><button>Home</button></a>
+	<a href="home.html"><button class="btn">Home</button></a>
 </body>
 </html>
