--- a/src/main/webapp/updatestudent.html
+++ b/src/main/webapp/updatestudent.html
@@ -24,6 +24,6 @@
 		</table>
 	</form>
 	<br>
-	<a href="home.html"><button>Home</button></a>
+	<a href="home.html"><button class="btn">Home</button></a>
 </body>
 </html>
